--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "test": "jest --watchAll"
   },
   "devDependencies": {
-    "jest": "^29.3.1",
-    "@babel/preset-env": "^7.20.2"
+    "@babel/preset-env": "^7.20.2",
+    "jest": "^29.3.1"
   }
 }
